feat(init-keepalived-config): autodetermine interface to use
Implement the logic from #3 to auto determine the interface but with ipcalc which is simpler and easier to understand. Thanks @xnojack for the contribution!
Also added contribution guide for tests and usage of conventional commits.

Resolves #3

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -30,6 +30,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          submodules: recursive
 
       - name: Set up Docker Buildx
         id: buildx_test
@@ -52,6 +54,7 @@ jobs:
           context: .
           platforms: linux/amd64
           push: false
+          load: true
           tags: keepalived:test-build
           cache-from: type=local,src=/tmp/.test-buildx-cache
           cache-to: type=local,dest=/tmp/.test-buildx-cache-new
@@ -66,14 +69,12 @@ jobs:
 
       - name: Run BATS tests
         run: |
-          docker run --rm -it --name keepalived-test \
-            --cap-add=NET_ADMIN \
-            --cap-add=NET_BROADCAST \
-            --net host \
-            --entrypoint /test/bats/bin/bats \
-            -w /test \
-            -v "$PWD/test:/test" \
-            keepalived:test-build .
+          docker run --rm --name keepalived-test \
+              --cap-add=NET_ADMIN \
+              --entrypoint /test/bats/bin/bats \
+              -w /test \
+              -v "$PWD/test:/test" \
+              keepalived:test-build .
 
   # Build images.
   build:
