feat: Add instance state as ENV (#7)
* feat: Add instance state as ENV

* Add missing state substitution

* test: add missing priority env var

---------

Co-authored-by: shawly <shawlyde@gmail.com>

--- a/rootfs/etc/keepalived/keepalived.conf
+++ b/rootfs/etc/keepalived/keepalived.conf
@@ -19,7 +19,7 @@ vrrp_script chk_haproxy {
 }
 
 vrrp_instance lb-vips {
-    state BACKUP
+    state {{STATE}}
     interface {{INTERFACE}}
     virtual_router_id {{VRID}}
     priority {{PRIORITY}}
