--- a/rootfs/etc/keepalived/keepalived.conf
+++ b/rootfs/etc/keepalived/keepalived.conf
@@ -25,6 +25,12 @@ vrrp_instance lb-vips {
     priority {{PRIORITY}}
     advert_int 1
     nopreempt # Prevent fail-back
+{{AUTH_BLOCK_START}}
+    authentication {
+        auth_type {{AUTH_TYPE}}
+        auth_pass {{AUTH_PASS}}
+    }
+{{AUTH_BLOCK_END}}
     track_script {
         chk_haproxy
     }
